<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <!--<item-->
        <!--android:id="@+id/action_favorite"-->
        <!--android:icon="@drawable/ic_favorite_black_48dp"-->
        <!--android:title="@string/action_favorite"-->
        <!--app:showAsAction="ifRoom"/>-->

    <!-- Settings, should always be in the overflow -->

    <!--<item android:id="@+id/action_hi"-->
        <!--android:title="@string/hello"-->
        <!--android:icon="@drawable/ic_hello"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item android:id="@+id/action_add_credits"
        android:title="@string/add_credits"
        android:icon="@drawable/add_credits"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_how_it_works"
        android:title="@string/how_it_works"
        app:showAsAction="never"/>

    <!--<item android:id="@+id/action_earn"-->
        <!--android:title="@string/earn_credits"-->
        <!--app:showAsAction="never"/>-->

    <item android:id="@+id/action_clear_conversation"
        android:title="@string/clear_conversation"
        app:showAsAction="never"/>


    <item android:id="@+id/action_terms"
        android:title="@string/terms_of_use"
        app:showAsAction="never"/>

    <item android:id="@+id/action_privacy"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>


    <item android:id="@+id/action_refund_policy"
        android:title="@string/refund_policy"
        app:showAsAction="never"/>

    <item android:id="@+id/action_faqs"
        android:title="@string/faqs"
        app:showAsAction="never"/>

    <item android:id="@+id/notification_settings"
        android:title="@string/notification_settings"
        app:showAsAction="never" />

    <item android:id="@+id/send_feeback"
        android:title="@string/send_feedback"
        app:showAsAction="never"/>

</menu>
